<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/RMColor2">

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_back"
                android:background="@null"
                android:layout_marginEnd="15dp"
                android:contentDescription="TODO" />

            <TextView
                android:id="@+id/charName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/lblack"
                android:background="@null"
                android:textSize="25sp"
                android:fontFamily="@font/avenir_bold"/>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/charImage"
                android:layout_width="275dp"
                android:layout_height="275dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/RMColor2Light"
                android:contentDescription="TODO" />

            <LinearLayout
                android:id="@+id/statusLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/statusTitle"
                    android:textColor="@color/black"
                    android:fontFamily="@font/avenir_bold" />

                <TextView
                    android:id="@+id/statusText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="22sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/avenir_reg"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/specyLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/specyTitle"
                    android:textColor="@color/black"
                    android:fontFamily="@font/avenir_bold" />

                <TextView
                    android:id="@+id/specyText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="22sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/avenir_reg"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/genderLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/genderTitle"
                    android:textColor="@color/black"
                    android:fontFamily="@font/avenir_bold" />

                <TextView
                    android:id="@+id/genderText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="22sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/avenir_reg"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/originLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/originTitle"
                    android:textColor="@color/black"
                    android:fontFamily="@font/avenir_bold" />

                <TextView
                    android:id="@+id/originText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="22sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/avenir_reg"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/locationLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/locationTitle"
                    android:textColor="@color/black"
                    android:fontFamily="@font/avenir_bold" />

                <TextView
                    android:id="@+id/locationText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="22sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/avenir_reg"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/episodesLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/episodesTitle"
                    android:textColor="@color/black"
                    android:fontFamily="@font/avenir_bold" />

                <TextView
                    android:id="@+id/episodesText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="22sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/avenir_reg"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/createdTimeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/createdTimeTitle"
                    android:textColor="@color/black"
                    android:fontFamily="@font/avenir_bold" />

                <TextView
                    android:id="@+id/createdTimeText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="22sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/avenir_reg"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>